--- a/dalaoer.html
+++ b/dalaoer.html
@@ -9,7 +9,7 @@
     <!-- uc强制竖屏 -->
     <meta name="screen-orientation" content="portrait">
     <!-- QQ强制竖屏 -->
-    <meta name="x5-orientation" content="portrait">
+    <meta name="x5-orientation" content="landscape">
     <!-- UC强制全屏 -->
     <meta name="full-screen" content="yes">
     <!-- QQ强制全屏 -->
