--- a/dalaoer.html
+++ b/dalaoer.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="user-scalable=no, width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <!-- uc强制竖屏 -->
-    <meta name="screen-orientation" content="portrait">
+    <meta name="screen-orientation" content="landscape">
     <!-- QQ强制竖屏 -->
     <meta name="x5-orientation" content="landscape">
     <!-- UC强制全屏 -->
